--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,11 +1,34 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0"?>
+<web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	version="2.5">
 
-<web-app version="3.1"
-         xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
-         metadata-complete="false">
+	<display-name>PicketLink Employee Service Provider</display-name>
 
-         
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>angularjs client</web-resource-name>
+			<url-pattern>/client/*</url-pattern>
+			<url-pattern>/client/index.html</url-pattern>
+		</web-resource-collection>
+		<auth-constraint>
+			<role-name>user</role-name>
+		</auth-constraint>
+	</security-constraint>
+
+	<error-page>
+	    <!-- Missing login -->
+	    <error-code>401</error-code>
+	    <location>/index.html</location>
+	</error-page>
+	<error-page>
+	    <!-- Forbidden directory listing -->
+	    <error-code>403</error-code>
+	    <location>/index.html</location>
+	</error-page>
+
+	<security-role>
+		<role-name>user</role-name>
+	</security-role>
+
 </web-app>
-
